k8s/istio/gateway.yaml
# SPDX-License-Identifier: MIT
# Copyright (c) 2026 Kesavan Mariappan (kesavan-mariappan-devops)
# https://github.com/kesavan-mariappan-devops/k8s-istio-platform

apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: k8s-istio-platform-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "k8s-istio-platform.backend.local"
        - "k8s-istio-platform.frontend.local"
