k8s/istio/destinationrule-backend.yaml
# SPDX-License-Identifier: MIT
# Copyright (c) 2026 Kesavan Mariappan (kesavan-mariappan-devops)
# https://github.com/kesavan-mariappan-devops/k8s-istio-platform

apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: mesh-api-dr
  namespace: backend
spec:
  host: mesh-api.backend.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
    connectionPool:
      http:
        http1MaxPendingRequests: 10
        http2MaxRequests: 100
    outlierDetection:               # circuit breaker
      consecutive5xxErrors: 3
      interval: 10s
      baseEjectionTime: 30s
      maxEjectionPercent: 50
  subsets:
    - name: v1
      labels:
        app: mesh-api
        version: v1
    - name: v2
      labels:
        app: mesh-api
        version: v2
