k8s/istio/fault-injection.yaml
# LEARNING EXERCISE — apply this to test resilience, then revert
# kubectl apply -f fault-injection.yaml
# kubectl apply -f virtualservice-backend.yaml  (to revert)

apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: mesh-api-vs
  namespace: backend
spec:
  hosts:
    - "k8s-istio-platform.backend.local"
    - "mesh-api.backend.svc.cluster.local"
  gateways:
    - istio-system/k8s-istio-platform-gateway
    - mesh
  http:
    - match:
        - uri:
            prefix: /api
        - uri:
            prefix: /health
      fault:
        delay:
          percentage:
            value: 50         # 50% of requests get a 3s delay
          fixedDelay: 3s
        abort:
          percentage:
            value: 20         # 20% of requests get a 500 error
          httpStatus: 500
      route:
        - destination:
            host: mesh-api.backend.svc.cluster.local
            subset: v1
            port:
              number: 5000
