k8s/istio/virtualservice-frontend.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: mesh-ui-vs
  namespace: frontend
spec:
  hosts:
    - "k8s-istio-platform.frontend.local"
  gateways:
    - istio-system/k8s-istio-platform-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: mesh-ui.frontend.svc.cluster.local
            port:
              number: 80
